(lang dune 3.2)

(name acaml)

(generate_opam_files true)

(authors "Martin Andrieux")

(maintainers "Martin Andrieux")

(package
 (name acaml)
 (synopsis "An actor library for OCaml 5")
 (description "An actor library for OCaml 5")
 (depends ocaml dune))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
