(executable
 (libraries actorsocaml actorsocamlppx)
 (name exple_pingpong)
 (preprocess (pps actorsocamlppx))
 (modules exple_pingpong))

(executable
 (libraries actorsocaml)
 (name exple_ring)
 (modules exple_ring))

(executable
 (libraries actorsocaml actorsocamlppx)
 (name exple_syracuse)
 (preprocess (pps actorsocamlppx))
 (modules exple_syracuse))
