(executable
 (libraries actorsocaml actorsocamlppx)
 (name exple_pingpong)
 (preprocess (staged_pps actorsocamlppx))
 (modules exple_pingpong))

(executable
 (libraries actorsocaml)
 (name exple_ring)
 (preprocess (staged_pps actorsocamlppx))
 (modules exple_ring))

(executable
 (libraries actorsocaml actorsocamlppx)
 (name exple_syracuse)
 (preprocess (staged_pps actorsocamlppx))
 (modules exple_syracuse))
