(test
 (libraries actorsocaml unix)
 (name test_actor)
 (modules test_actor))

(test
 (libraries actorsocaml)
 (name test_promise)
 (modules test_promise))

(test
 (libraries actorsocaml)
 (name test_pingpong)
 (modules test_pingpong))

(test
 (libraries actorsocaml)
 (name test_ring)
 (modules test_ring))

(test
 (libraries actorsocaml unix)
 (name test_bench)
 (modules test_bench))

(test
 (libraries actorsocaml)
 (name test_condition)
 (modules test_condition))
