(test
 (libraries actorsocaml alcotest)
 (name test_actor)
 (preprocess (staged_pps actorsocamlppx))
 (modules test_actor))

(test
 (libraries actorsocaml alcotest)
 (name test_condition)
 (preprocess (staged_pps actorsocamlppx))
 (modules test_condition))

(test
 (libraries actorsocaml alcotest)
 (name test_promise)
 (preprocess (staged_pps actorsocamlppx))
 (modules test_promise))

(test
 (libraries actorsocaml)
 (name test_object)
 (preprocess (staged_pps actorsocamlppx))
 (modules test_object))

;(executable
 ;(name test_foo)
 ;(modules test_foo bar)
 ;(preprocess (staged_pps actorsocamlppx)))
