(executable
 (libraries actorsocaml benchmark)
 (name bench_ackermann_await)
 (preprocess (staged_pps actorsocamlppx))
 (modules bench_ackermann_await))

(executable
 (libraries actorsocaml benchmark)
 (name bench_ackermann_forward)
 (preprocess (staged_pps actorsocamlppx))
 (modules bench_ackermann_forward))

(executable
 (libraries actorsocaml benchmark eio_main)
 (name bench_ackermann_eio)
 (modules bench_ackermann_eio))
