(executable
 (name ppx)
 (modules ppx)
 (libraries ppxlib name_resolver)
 (modes      byte))

(rule
  (target test_resolver.actual.ml)
  (deps (:pp ppx.exe) (:input test_resolver.ml)) 
  (action
    (with-stdout-to
      %{target}
      (bash "./%{exe:ppx.bc} -no-color --impl %{input} || true")
    )
  )
)

(rule
  (alias runtest)
  (action (diff test_resolver.expected.ml test_resolver.actual.ml))
)
